fix(textarea): remove extra margin on firefox & safari

--- a/core/src/components/textarea/textarea.scss
+++ b/core/src/components/textarea/textarea.scss
@@ -119,11 +119,9 @@
   word-break: break-word;
 }
 
-:host(.legacy-textarea) .native-textarea {
-  @include margin(0);
-}
-
 .native-textarea {
+  // Browsers may add a default margin to the textarea
+  @include margin(0);
   @include padding(0, 0, 0, 0);
   @include border-radius(var(--border-radius));
 
